@@ -1,15 +1,5 @@
 @include portal-type-font-awesome-icon(ftw-htmlblock-htmlblock, code);
 
-//ie-only supports IE11 and MS Edge.
-//IE10 and older MS browsers don't know pointer-events, so this selector won't work for them.
-@include ie-only(".sl-can-edit .ftw-htmlblock-htmlblock.has-iframe .sl-block-content") {
-  cursor:  not-allowed;
-}
-
-@include ie-only(".sl-can-edit .ftw-htmlblock-htmlblock iframe") {
-  pointer-events: none;
-}
-
 textarea#form-widgets-content {
     min-height: 12em;
 }
