@@ -5,7 +5,8 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Install ftw.iframefix
+  [Kevin Bieri]
 
 
 1.0.5 (2017-03-07)
